payment-service/envoy.yaml
static_resources:

  listeners:
    - name: payment_listener

      address:
        socket_address:
          address: 0.0.0.0
          port_value: 4000

      filter_chains:
        - filters:

            - name: envoy.filters.network.http_connection_manager

              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                stat_prefix: payment

                route_config:
                  name: payment_route

                  virtual_hosts:
                    - name: payment_service

                      domains:
                        - "*"

                      response_headers_to_add:
                        - header:
                            key: x-service-instance-id
                            value: "%HOSTNAME%"

                      routes:
                        - match:
                            prefix: "/"

                          route:
                            cluster: payment_app

                http_filters:

                  - name: envoy.filters.http.router

                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:

    - name: payment_app

      type: STATIC

      connect_timeout: 1s

      load_assignment:

        cluster_name: payment_app

        endpoints:

          - lb_endpoints:

              - endpoint:

                  address:

                    socket_address:
                      address: 127.0.0.1
                      port_value: 3002
